src/content/docs/versions/http-api/0.5.x/routes.mdx
---
title: Routes
description: API routes to configure the Smelter.
slug: http-api/0.5.x/http-api/routes
---

import { Code } from '@astrojs/starlight/components';

API is served by default on the port 8081. Different port can be configured using [`SMELTER_API_PORT`](/deployment/configuration#smelter_api_port) environment variable.

## Start request

```http
POST: /api/start
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Starts the processing pipeline.

If an output was registered before the start request, then actual output stream will start producing
video/audio after this request.

## Reset request

```http
POST: /api/reset
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Resets the Smelter state to the initial configuration. Removes all inputs, outputs, and registered resources.

***

## Outputs configuration

### Register output

```http
POST: /api/output/:output_id/register
Content-Type: application/json
```

```tsx
type RequestBody = {
  type: "rtp_stream" | "mp4" | "whep_server" | "whip_client" | "rtmp_client"
  ... // output specific options
}
```

Register external destination that can be used as a Smelter output. See outputs documentation to learn more.

* [RTP](/http-api/0.5.x/outputs/rtp)
* [MP4](/http-api/0.5.x/outputs/mp4)
* [WHEP](/http-api/0.5.x/outputs/whep)
* [WHIP](/http-api/0.5.x/outputs/whip)
* [RTMP](/http-api/0.5.x/outputs/rtmp)

### Unregister output

```http
POST /api/output/:output_id/unregister
Content-Type: application/json
```

```tsx
type RequestBody = {
  schedule_time_ms?: number;
}
```

Unregister a previously registered output with an id `:output_id`.

* `schedule_time_ms` - Time in milliseconds when this request should be applied. Value `0` represents time of [the start request](#start-request).

### Update output

```http
POST: /api/output/:output_id/update
Content-Type: application/json
```

```tsx
type RequestBody = {
  video?: {
    root: Component
  };
  audio?: {
    inputs: AudioInput[];
  };
  schedule_time_ms?: number;
}

type AudioInput = {
  input_id: InputId;
  volume?: number;
}
```

Update scene definition and audio mixer configuration for output with ID `:output_id`. The output stream has to be registered first. See [`register output`](#register-output) request.

* `video` - Configuration for video output.
* `video.root` - Root of a component tree/scene that should be rendered for the output. {/*Add link to Component description*/}
* `audio` - Configuration for audio output.
* `audio.inputs` - Input streams that should be mixed together and their configuration.
* `audio.inputs[].input_id` - Input ID.
* `audio.inputs[].volume` - (**default=`1.0`**) Float in `[0, 2]` range representing volume.
* `schedule_time_ms` - Time in milliseconds when this request should be applied. Value `0` represents time of [the start request](#start-request).

***

### Request keyframe

```http
POST: /api/output/:output_id/request_keyframe
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Requests additional keyframe (I frame) on the video output.

## Inputs configuration

### Register input

```http
POST: /api/input/:input_id/register
Content-Type: application/json
```

```tsx
type RequestBody = {
  type: "rtp_stream" | "mp4" | "decklink" | "whip_server" | "whep_client" | "rtmp_server";
  ... // input specific options
}
```

Register external source that can be used as a Smelter input. See inputs documentation to learn more.

* [RTP](/http-api/0.5.x/inputs/rtp)
* [MP4](/http-api/0.5.x/inputs/mp4)
* [DeckLink](/http-api/0.5.x/inputs/decklink)
* [WHEP](/http-api/0.5.x/inputs/whep)
* [WHIP](/http-api/0.5.x/inputs/whip)
* [RTMP](/http-api/0.5.x/inputs/rtmp)

### Unregister input

```http
POST: /api/input/:input_id/unregister
Content-Type: application/json
```

```tsx
type RequestBody = {
  schedule_time_ms?: number;
}
```

Unregister a previously registered input with an id `:input_id`.

* `schedule_time_ms` - Time in milliseconds when this request should be applied. Value `0` represents time of [the start request](#start-request).

***

## Resources configuration

### Register image

```http
POST: /api/image/:image_id/register
Content-Type: application/json
```

Register an image asset. Request body is defined in the [image](/http-api/0.5.x/resources/image) docs.

### Unregister image

```http
POST: /api/image/:image_id/unregister
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Unregister a previously registered image asset with an id `:image_id`.

### Register shader

```http
POST: /api/shader/:shader_id/register
Content-Type: application/json
```

Register a shader. Request body is defined in the [shader](/http-api/0.5.x/resources/shader) docs.

### Unregister shader

```http
POST: /api/shader/:shader_id/unregister
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Unregister a previously registered shader with an id `:shader_id`.

### Register web renderer instance

```http
POST: /api/web-renderer/:instance_id/register
Content-Type: application/json
```

Register a web renderer instance. Request body is defined in the [web renderer](/http-api/0.5.x/resources/web-renderer) docs.

### Unregister web renderer instance

```http
POST: /api/web-renderer/:instance_id/unregister
Content-Type: application/json
```

```tsx
type RequestBody = {}
```

Unregister a previously registered web renderer instance with an id `:instance_id`.

### Register font

```http
POST: /api/font/register
Content-Type: multipart/form-data
```

Upload additional fonts to the Smelter server. After request completes, you can
start using new fonts with a [`Text`](/http-api/0.5.x/components/text) component.

## Status endpoint

```http
GET: /status
Content-Type: application/json
```

```tsx
type Response = {
  instance_id: string
}
```

Status/health check endpoint. Returns `200 OK`.

* `instance_id` - ID that can be provided using [`SMELTER_INSTANCE_ID`](/deployment/configuration#smelter_instance_id) environment variable. Defaults to random number.

## WebSocket endpoint

```http
GET: /ws
```

Establish WebSocket connection to listen for Smelter events. List of supported events and their descriptions can be found [here](/http-api/0.5.x/events).
